--- a/link.css
+++ b/link.css
@@ -13,27 +13,27 @@
     <div class="social-container">
         <div class="social-item">
             <a href="https://www.facebook.com/artalo.lab" target="_blank">
-                <img src="./img/fb.png" alt="Facebook">
+                <img src="fb.png" alt="Facebook">
             </a>
         </div>
         <div class="social-item">
             <a href="https://www.instagram.com/artalolab__" target="_blank">
-                <img src="img/ig.png" alt="Instagram">
+                <img src="ig.png" alt="Instagram">
             </a>
         </div>
         <div class="social-item">
             <a href="https://www.tiktok.com/@artalolab" target="_blank">
-                <img src="img/tt.png" alt="TikTok">
+                <img src="tt.png" alt="TikTok">
             </a>
         </div>
         <div class="social-item">
             <a href="https://www.youtube.com/@Artaloartalo" target="_blank">
-                <img src="img/yt.png" alt="YouTube">
+                <img src="yt.png" alt="YouTube">
             </a>
         </div>
         <div class="social-item">
             <a href="https://wa.me/3392530535" target="_blank">
-                <img src="img/wp.png" alt="WhatsApp">
+                <img src="wp.png" alt="WhatsApp">
             </a>
         </div>
     </div>
